[gd_scene load_steps=7 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://RegexReplace.gd" type="Script" id=2]
[ext_resource path="res://RegexFind.gd" type="Script" id=3]
[ext_resource path="res://TextEdit.gd" type="Script" id=4]
[ext_resource path="res://renames.gd" type="Script" id=5]
[ext_resource path="res://cpy_text.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PickFile" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 500 )
window_title = "Open a Directory"
mode = 2
access = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UPButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 95.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "UP"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 99.0
margin_top = 3.0
margin_right = 164.0
margin_bottom = 17.0
size_flags_stretch_ratio = 4.0
text = "directory: "

[node name="CurrentDir" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_right = 548.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../../HBoxContainer/RegexReplace")
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 552.0
margin_top = 3.0
margin_right = 639.0
margin_bottom = 17.0
size_flags_stretch_ratio = 4.0
text = "new directory"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 643.0
margin_right = 1024.0
margin_bottom = 20.0
focus_next = NodePath("../../HBoxContainer/HBoxContainer/group-folder")
focus_previous = NodePath("../../HBoxContainer/RegexReplace")
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 202.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "pick folder"

[node name="RegexFind" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 206.0
margin_right = 611.0
margin_bottom = 38.0
focus_neighbour_right = NodePath("../RegexReplace")
focus_next = NodePath("../RegexReplace")
focus_previous = NodePath("../RegexReplace")
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/caret_background_color = Color( 0.0666667, 0.960784, 0.129412, 1 )
syntax_highlighting = true
script = ExtResource( 3 )

[node name="RegexReplace" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 615.0
margin_right = 817.0
margin_bottom = 38.0
focus_neighbour_left = NodePath("../RegexFind")
focus_neighbour_right = NodePath("../../HBoxContainer2/CurrentDir")
focus_next = NodePath("../../HBoxContainer2/TextEdit")
focus_previous = NodePath("../RegexFind")
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 821.0
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="group-folder" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 38.0
focus_next = NodePath("../Destroy")
focus_previous = NodePath("../../../HBoxContainer2/TextEdit")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "rename"

[node name="Destroy" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 134.0
margin_bottom = 38.0
focus_next = NodePath("../extract")
focus_previous = NodePath("../group-folder")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "trash"

[node name="extract" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 203.0
margin_bottom = 38.0
focus_next = NodePath("../../RegexFind")
focus_previous = NodePath("../Destroy")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "extract"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CopyArea" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
margin_right = 906.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="cpy_text" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 910.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "copy"
script = ExtResource( 6 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 1024.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 25.0

[node name="FileList" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 506.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="File" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/FileList"]
margin_right = 506.0
margin_bottom = 486.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "fdfdfd"

[node name="renames" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
script = ExtResource( 5 )

[node name="File" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/renames"]
visible = false
margin_right = 1024.0
margin_bottom = 485.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "text
"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0

[connection signal="dir_selected" from="PickFile" to="." method="_on_PickFile_dir_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/UPButton" to="." method="_on_UPButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/RegexFind" to="." method="_on_RegexFind_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/RegexReplace" to="." method="_on_RegexReplace_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/group-folder" to="." method="_on_groupfolder_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/Destroy" to="." method="_on_Destroy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/extract" to="." method="_on_extract_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/cpy_text" to="." method="_on_cpy_text_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/HSplitContainer/FileList/File" to="." method="_on_File_meta_clicked"]
